--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -19,9 +19,9 @@ p {
 }
 
 .container-padding {
-  @apply sm:px-8 md:px-12 lg:px-20 xl:px-40 px-4 py-4 sm:py-10
+  @apply px-6 sm:px-6 md:px-8 lg:px-20 xl:px-40 py-4 sm:py-10
 }
 
 .header-padding {
-  @apply sm:px-8 md:px-12 lg:px-20 xl:px-40 px-4 py-4 sm:py-6
+  @apply px-6 sm:px-6 md:px-8 lg:px-20 xl:px-40 py-4 sm:py-6
 }
