--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -12,16 +12,30 @@ h3 {
 
 a {
   @apply hover:underline hover:text-blue-500;
+
+  &.link {
+    @apply hover:underline text-blue-500;
+  }
 }
 
 p {
   @apply text-sm
 }
 
+p + p {
+  @apply pt-2
+}
+
 .container-padding {
-  @apply px-6 sm:px-6 md:px-8 lg:px-20 xl:px-40 py-6 sm:py-10
+  @apply px-6 sm:px-6 md:px-8 lg:px-20 xl:px-32 py-6 sm:py-10
 }
 
 .header-padding {
-  @apply px-6 sm:px-6 md:px-8 lg:px-20 xl:px-40 py-6 sm:py-6
+  @apply px-6 sm:px-6 md:px-8 lg:px-20 xl:px-32 py-6 sm:py-6
+}
+
+@media (min-width: 1536px) {
+  .container {
+    max-width: 1280px;
+  }
 }
