--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -51,6 +51,10 @@ p + p {
   @apply px-6 sm:px-6 md:px-8 lg:px-20 xl:px-32 py-6 sm:py-10
 }
 
+.container-margin {
+  @apply mx-6 sm:mx-6 md:mx-8 lg:mx-20 xl:mx-32 my-2 sm:my-4
+}
+
 .header-padding {
   @apply px-6 sm:px-6 md:px-8 lg:px-20 xl:px-32 py-4 sm:py-4
 }
