--- a/assets/scss/_color.scss
+++ b/assets/scss/_color.scss
@@ -9,3 +9,15 @@
 .bg-dark-blue {
   background-color: #090076;
 }
+
+.bg-header {
+  background-color: #040133;
+}
+
+.bg-disclaimer {
+  background-color: #060146;
+}
+
+.bg-footer {
+  background-color: rgba(9, 0 ,118, 0.1);
+}
