--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -86,6 +86,17 @@ p + p {
   @apply py-1 px-2 bg-gray-600 rounded text-sm text-white hover:text-white hover:no-underline hover:bg-gray-500;
 }
 
+.responsive {
+  padding-bottom: 50%;
+}
+
+.highlight-card {
+  @apply px-2 py-1 bg-green-100 rounded;
+  span {
+    @apply text-base md:text-lg;
+  }
+}
+
 @media (min-width: 1536px) {
   .container {
     max-width: 1280px;
