--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -75,7 +75,7 @@ p + p {
   }
 }
 .card {
-  @apply shadow-lg h-full w-full border rounded-lg p-6;
+  @apply shadow h-full w-full border rounded-lg p-6;
 }
 
 .last-updated {
