reduce container padding and update button color

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -47,7 +47,7 @@ p + p {
 }
 
 .container-padding {
-  @apply px-6 sm:px-6 md:px-8 lg:px-20 xl:px-32 py-6 sm:py-10
+  @apply px-6 sm:px-6 md:px-8 lg:px-20 xl:px-32 py-4 sm:py-6
 }
 
 .container-margin {
@@ -83,7 +83,7 @@ p + p {
 }
 
 .button {
-  @apply py-1 px-2 bg-gray-600 rounded text-sm text-white hover:text-white hover:no-underline hover:bg-gray-500;
+  @apply py-1 px-2 bg-indigo-600 rounded text-sm text-white hover:text-white hover:no-underline hover:bg-indigo-500;
 }
 
 .responsive {
