update vaccine-block and card class

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -34,7 +34,7 @@ p + p {
 }
 
 .vaccination-block {
-  @apply grid grid-cols-8 gap-4 sm:gap-10 md:gap-20;
+  @apply grid grid-cols-8 gap-4 sm:gap-6 md:gap-20;
 }
 
 .vaccination-block {
@@ -74,8 +74,7 @@ p + p {
   }
 }
 .card {
-  @apply shadow h-full w-full border rounded-lg p-6;
-  background-color: #fafafa;
+  @apply h-full w-full border rounded-lg p-4;
 }
 
 .last-updated {
