--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -46,6 +46,16 @@ p + p {
   }
 }
 
+.grid-block {
+  @apply grid grid-cols-8 gap-4 sm:gap-6 md:gap-20;
+}
+
+.grid-block {
+  div.block {
+    @apply col-span-full sm:col-span-full md:col-span-4;
+  }
+}
+
 .container-padding {
   @apply px-6 sm:px-6 md:px-8 lg:px-20 xl:px-32 py-4 sm:py-6
 }
